@@ -1,3 +1,7 @@
+2003-08-19  Bruno Haible  <bruno@clisp.org>
+
+	* xalloc.m4 (gl_PREREQ_XSTRDUP): Don't check for <string.h> any more.
+
 2003-08-17  Simon Josefsson  <jas@extundo.com>
 
 	* argp.m4: New file.
